--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cron": "^1.7.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
@@ -23,7 +24,8 @@
     "passport-local": "^1.0.0",
     "password-validator": "^4.1.1",
     "scalable-blob-store": "^4.0.0",
-    "shelljs": "^0.8.3"
+    "shelljs": "^0.8.3",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
