--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "generate-password": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "password-validator": "^4.1.1",
     "scalable-blob-store": "^4.0.0",
-    "shelljs": "^0.8.3",
-    "sort-by": "^1.2.0"
+    "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
