--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "Thomas Kiechle",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/server.js --exec 'node --require dotenv/config --require babel-register'",
+    "start": "nodemon src/server.js --exec 'node --require dotenv/config --require @babel/register'",
     "start-without": "nodemon src/server.js --exec babel-node",
-    "build": "babel src -d build"
+    "build": "babel src -d build",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -29,16 +30,12 @@
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-async-generator-functions": "^6.24.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-config-standard": "^12.0.0",
