--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Thomas Kiechle",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/server.js --exec 'node --require dotenv/config --require @babel/register'",
-    "start-without": "nodemon src/server.js --exec babel-node",
+    "start-dev": "nodemon src/server.js --exec 'node --require dotenv/config --require @babel/register'",
+    "start": "nodemon src/server.js --exec 'node --require @babel/register'",
     "build": "babel src -d build",
     "test": "jest"
   },
@@ -29,7 +29,8 @@
     "passport-local": "^1.0.0",
     "password-validator": "^4.1.1",
     "scalable-blob-store": "^4.0.0",
-    "shelljs": "^0.8.3"
+    "shelljs": "^0.8.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
